Added Login to complete flow
* Login Toegevoegd
* Administrator & Dispatch User tabellen toegevoegd
* DokterPraktijk toegevoegd, dit is de laatste stap in de workflow
* Index pagina opgekuist
* _Layout pagina header verbeterd
* LDAP Connection string & provider toegevoegd in de web.config
* Kleine bugfixes

--- a/Patient Transport Migration/Views/Home/DispatchOverzicht/DispatchOverzicht.cshtml
+++ b/Patient Transport Migration/Views/Home/DispatchOverzicht/DispatchOverzicht.cshtml
@@ -247,8 +247,8 @@
                 data: "jsonTaak=" + JSON.stringify({ "TaakId": TaakId }),
                 beforeSend() {
                     $TaakTr.css({ opacity: 0.5 });
-                }, success: function () {
-                    if (data) { // = True
+                }, success: function (data) {
+                    if (data == "True") { // = True
                         MaakTaakStatus(TaakId, "alert-success", "Taak verwijderd!");
                         VerbergTaak(TaakId);
                     } else {
