--- a/Patient Transport Migration/Views/Home/Index.cshtml
+++ b/Patient Transport Migration/Views/Home/Index.cshtml
@@ -1,13 +1,8 @@
 ﻿
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Home";
 }
 
-<ul>
-    <li>@Html.ActionLink("Dokter Status", "DokterStatus", "Home")</li>
-    <li>@Html.ActionLink("Patiënt Info", "PatientInfo", "Home")</li>
-    <li>@Html.ActionLink("Verpleging Overzicht", "VerplegingOverzicht", "Home")</li>
-    <li>@Html.ActionLink("Maak Vervoer Aanvraag", "MaakVervoerAanvraag", "Home")</li>
-    <li>@Html.ActionLink("Dispatch Overzicht", "DispatchOverzicht" , "Home")</li>
-    <li>@Html.ActionLink("Transport Medewerker Taken", "TransportMedewerker", "Home")</li>
-</ul>
+<div class="container content-container">
+    <p>Stagewerk van Bert Goens</p>
+</div>
