--- a/Patient Transport Migration/Views/Shared/_Layout.cshtml
+++ b/Patient Transport Migration/Views/Shared/_Layout.cshtml
@@ -11,21 +11,49 @@
     <script src="~/Scripts/bootstrap.min.js"></script>
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top" id="header">
+    <!-- Fixed navbar -->
+    <div class="navbar navbar-default navbar-fixed-top" role="navigation">
         <div class="container">
             <div class="navbar-header">
-                @Html.Label("Patient Tranport Migration", new { @class = "navbar-brand" })
-                @Html.ActionLink("Home", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="/Home/">Patient Transport</a>
             </div>
+            <div class="navbar-collapse collapse">
+                <ul class="nav navbar-nav navbar-default">
+                    <li><a class="active" href=""><i>@ViewBag.Title</i></a></li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                                        
+                    <li><a href="/Home/MaakVervoerAanvraag">Maak Vervoer Aanvraag</a></li>
+                    
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Patient Info <b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            <li class="dropdown-header">Patient Info</li>
+                            <li><a href="/Home/PatientInfo">Patiënt Info</a></li>
+                            <li><a href="/Home/DokterPraktijk">Dokter Praktijk</a></li>
+                            <li><a href="/Home/VerplegingOverzicht">Verpleging Overzicht</a></li>
+                            <li class="divider"></li>
+                            <li class="dropdown-header">Transport</li>
+                            <li><a href="/Home/DispatchOverzicht">Dispatch Overzicht</a></li>
+                            <li><a href="/Home/TransportMedewerker">Transport Medewerker Taken</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="/Account/Logout">Afmelden</a></li>
+                </ul>
+            </div><!--/.nav-collapse -->
         </div>
     </div>
+    
     <div class="container body-content">
-        <h2>@ViewBag.Title</h2>
-        <hr />
-
         @if (ViewBag.ErrorMessage != null) {
-            <div class="alert alert-danger">
-                @ViewBag.ErrorMessage;
+            <div class="alert alert-danger" style="display:inline-block">
+                @ViewBag.ErrorMessage
             </div>
         }
 
