--- a/Patient Transport Migration/Content/Css/Site.css
+++ b/Patient Transport Migration/Content/Css/Site.css
@@ -144,3 +144,12 @@ textarea {
     border: 1px solid #000000;
     padding: 0.2em;
 } 
+
+.clearfix:after { 
+   content: " ";
+   display: block; 
+   height: 0; 
+   clear: both;
+}
+.clearfix {
+}
