--- a/Patient Transport Migration/Views/Account/Login.cshtml
+++ b/Patient Transport Migration/Views/Account/Login.cshtml
@@ -4,20 +4,33 @@
     ViewBag.Title = "Login";
 }
 @if (ViewBag.ErrorMessage != null) {
-    <div class="alert alert-danger" style="display:inline-block">
+    <div class="alert alert-danger" style="display: inline-block">
         @ViewBag.ErrorMessage
     </div>
 }
 
 @using (Html.BeginForm("Login", "Account", FormMethod.Post)) {
 
-    <dl class="dl-horizontal" style="max-width:500px">
+    <dl class="dl-horizontal" style="max-width: 500px">
         <dt>@Html.LabelFor(m => m.Gebruikersnaam)</dt>
-        <dd>@Html.TextBoxFor(m => m.Gebruikersnaam)</dd>
+        <dd>
+            @Html.TextBoxFor(m => m.Gebruikersnaam)
+        </dd>
 
         <dt>@Html.LabelFor(m => m.Paswoord)</dt>
-        <dd>@Html.PasswordFor(m => m.Paswoord)</dd>
+        <dd>
+            @Html.PasswordFor(m => m.Paswoord)
+        </dd>
     </dl>
 
     <button type="submit" class="btn btn-default">Inloggen</button>
+}
+
+@if (ViewBag.Success == "1") {
+    <script src="~/Scripts/jquery-1.10.2.js"></script>
+    <script>
+        $(new function () {
+            window.location = "/Home/"
+        });
+    </script>
 }
